parallax website completed

--- a/Parallax-website/index.html
+++ b/Parallax-website/index.html
@@ -7,5 +7,74 @@
     <title>Parallax Website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="pimg1">
+      <div class="ptext">
+        <span class="textBg">Parallax Website</span>
+      </div>
+    </section>
+    <section class="section section-light">
+      <h2>Section One</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cumque
+        incidunt sit distinctio optio reprehenderit ipsa quisquam laudantium
+        reiciendis tempore, nemo perspiciatis accusamus ad qui animi iusto iste
+        id illo quidem sequi repellendus. Veritatis sapiente suscipit tempore
+        veniam eum repudiandae, tenetur, omnis corporis, consectetur adipisci
+        nisi. Non amet explicabo minima possimus adipisci assumenda vero impedit
+        iure quaerat provident, distinctio doloribus, enim sequi, ipsa soluta
+        quisquam? Ut voluptatum molestias ipsam impedit iusto modi libero
+        ducimus fugiat sit mollitia itaque non maiores nostrum quibusdam sed
+        quia consequuntur quasi sunt consectetur, ea unde harum perspiciatis
+        ratione architecto. Odit quae itaque consequuntur nesciunt laudantium?
+      </p>
+    </section>
+    <section class="pimg2">
+      <div class="ptext">
+        <span class="textBg">Explore Nature</span>
+      </div>
+    </section>
+    <section class="section section-light">
+      <h2>Section Two</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cumque
+        incidunt sit distinctio optio reprehenderit ipsa quisquam laudantium
+        reiciendis tempore, nemo perspiciatis accusamus ad qui animi iusto iste
+        id illo quidem sequi repellendus. Veritatis sapiente suscipit tempore
+        veniam eum repudiandae, tenetur, omnis corporis, consectetur adipisci
+        nisi. Non amet explicabo minima possimus adipisci assumenda vero impedit
+        iure quaerat provident, distinctio doloribus, enim sequi, ipsa soluta
+        quisquam? Ut voluptatum molestias ipsam impedit iusto modi libero
+        ducimus fugiat sit mollitia itaque non maiores nostrum quibusdam sed
+        quia consequuntur quasi sunt consectetur, ea unde harum perspiciatis
+        ratione architecto. Odit quae itaque consequuntur nesciunt laudantium?
+      </p>
+    </section>
+    <section class="pimg3">
+      <div class="ptext">
+        <span class="textBg">Look Deep into Nature</span>
+      </div>
+    </section>
+    <section class="section section-light">
+      <h2>Section Two</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure cumque
+        incidunt sit distinctio optio reprehenderit ipsa quisquam laudantium
+        reiciendis tempore, nemo perspiciatis accusamus ad qui animi iusto iste
+        id illo quidem sequi repellendus. Veritatis sapiente suscipit tempore
+        veniam eum repudiandae, tenetur, omnis corporis, consectetur adipisci
+        nisi. Non amet explicabo minima possimus adipisci assumenda vero impedit
+        iure quaerat provident, distinctio doloribus, enim sequi, ipsa soluta
+        quisquam? Ut voluptatum molestias ipsam impedit iusto modi libero
+        ducimus fugiat sit mollitia itaque non maiores nostrum quibusdam sed
+        quia consequuntur quasi sunt consectetur, ea unde harum perspiciatis
+        ratione architecto. Odit quae itaque consequuntur nesciunt laudantium?
+      </p>
+    </section>
+    <section class="pimg1">
+      <div class="ptext">
+        <span class="textBg">Do some Coding?</span>
+      </div>
+    </section>
+  </body>
 </html>
